[package]
name = "galbi"
version = "0.2.1" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "some shortcut types" 
keywords = ["shortcut", "type"] 
edition = "2018" 
license = "MIT" 
include = ["src/*", "Cargo.toml"] 
exclude = ["src/main.rs"] 
readme = "README.md" 
repository = "https://github.com/myyrakle/galbi" 
documentation = "https://github.com/myyrakle/galbi/blob/master/README.md" 
homepage = "https://github.com/myyrakle/galbi/blob/master/README.md" 


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
